--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-infinite-scroller": "^1.2.6",
+    "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
